Fix the brocken style and added spacing into thanks message and finally complete successfully!

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,8 @@ header {
 
 .total-con {
      height: 100%;
+     overflow: hidden;
+     display: inline-table;
      color: var(--text-primary);
      border-left: 1px solid var(--bg-dark-black);
      border-right: 1px solid var(--bg-dark-black);
